--- a/new.html
+++ b/new.html
@@ -198,35 +198,35 @@
         <td class="number"><span class="auto"></span></td>
         <td>Holandski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Dutch_language" target="_blank">Dutch language</a></td>
-        <td></td>
+        <td>De kleine prins</td>
         <td class="image"><a href="slike/holandski.jpg" target="_blank"><img src="slike/holandski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Italian_language" target="_blank">Italian language</a></td>
-        <td></td>
+        <td>Il Piccolo Principe</td>
         <td class="image"><a href="slike/italijanski.jpg" target="_blank"><img src="slike/italijanski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
-        <td></td>
+        <td>El princip Piscinin</td>
         <td class="image"><a href="slike/milanski-dijalekt.jpg" target="_blank"><img src="slike/milanski-dijalekt.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
-        <td></td>
+        <td>Ru Prengeparielle</td>
         <td class="image"><a href="slike/moliski.jpg" target="_blank"><img src="slike/moliski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kazaški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kazakh_language" target="_blank">Kazakh language</a></td>
-        <td></td>
+        <td>Кішкентай ханзада</td>
         <td class="image"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px"></a></td>
       </tr>
       <tr>
