--- a/new.html
+++ b/new.html
@@ -70,8 +70,8 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Srpski</td>
-        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian</a></td>
+        <td>Srpski latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Serbian_language" target="_blank">Serbian Latin</a></td>
         <td>Mali princ</td>
         <td class="image"><a href="slike/srpski-latinica.jpg" target="_blank"><img src="slike/srpski-latinica.jpg" width="50px"></a></td>
       </tr>
