--- a/new.html
+++ b/new.html
@@ -229,6 +229,13 @@
         <td>Кішкентай ханзада</td>
         <td class="image"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Katalonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Catalan_language" target="_blank">Catalan language</a></td>
+        <td>El petit príncep</td>
+        <td class="image"><a href="slike/katalonski.jpg" target="_blank"><img src="slike/katalonski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kineski jezik</td>
