--- a/new.html
+++ b/new.html
@@ -229,7 +229,7 @@
         <td>Кішкентай ханзада</td>
         <td class="image"><a href="slike/kazaski.jpg" target="_blank"><img src="slike/kazaski.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Katalonski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Catalan_language" target="_blank">Catalan language</a></td>
@@ -242,6 +242,13 @@
         <td><a href="https://en.wikipedia.org/wiki/Chinese_language" target="_blank">Chinese language</a></td>
         <td>小王子</td>
         <td class="image"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Chavakano jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
+        <td>El Diutay principe </td>
+        <td class="image"><a href="slike/kreolski(chavacano).jpg" target="_blank"><img src="slike/kreolski(chavacano).jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -270,8 +277,6 @@
 </table>
 
 
-    <a href="slike/katalonski.jpg">Katalonski</a><br/>
-    <a href="slike/kreolski(chavacano).jpg">Kreolski (chavacano)</a><br/>
     <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
