--- a/new.html
+++ b/new.html
@@ -264,6 +264,13 @@
         <td>Principulus</td>
         <td class="image"><a href="slike/latinski.jpg" target="_blank"><img src="slike/latinski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Letonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Latvian_language" target="_blank">Latvian language</a></td>
+        <td>Mazais princis </td>
+        <td class="image"><a href="slike/letonski.jpg" target="_blank"><img src="slike/letonski.jpg" width="50px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number"><span class="auto"></span></td>
