--- a/new.html
+++ b/new.html
@@ -271,6 +271,13 @@
         <td>Mazais princis </td>
         <td class="image"><a href="slike/letonski.jpg" target="_blank"><img src="slike/letonski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Mađarski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hungarian_language" target="_blank">Hungarian language</a></td>
+        <td>A Kis herceg</td>
+        <td class="image"><a href="slike/madjarski.jpg" target="_blank"><img src="slike/madjarski.jpg" width="50px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -284,7 +291,6 @@
 </table>
 
 
-    <a href="slike/letonski.jpg">Letonski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
