--- a/new.html
+++ b/new.html
@@ -278,6 +278,13 @@
         <td>A Kis herceg</td>
         <td class="image"><a href="slike/madjarski.jpg" target="_blank"><img src="slike/madjarski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Makedonski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Macedonian_language" target="_blank">Macedonian language</a></td>
+        <td>Малиот принц</td>
+        <td class="image"><a href="slike/makedonski.jpg" target="_blank"><img src="slike/makedonski.jpg" width="50px"></a></td>
+      </tr>
 <!--
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -291,8 +298,6 @@
 </table>
 
 
-    <a href="slike/madjarski.jpg">Madjarski</a><br/>
-    <a href="slike/makedonski.jpg">Makedonski</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
     <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
