--- a/new.html
+++ b/new.html
@@ -285,6 +285,14 @@
         <td>Малиот принц</td>
         <td class="image"><a href="slike/makedonski.jpg" target="_blank"><img src="slike/makedonski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Nemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German language</a></td>
+        <td>Der kleine Prinz</td>
+        <td class="image"><a href="slike/nemacki.jpg" target="_blank"><img src="slike/nemacki.jpg" width="50px"></a></td>
+      </tr>
+     
 <!--
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -298,7 +306,6 @@
 </table>
 
 
-    <a href="slike/nemacki.jpg">Nemački</a><br/>
     <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
     <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
