--- a/new.html
+++ b/new.html
@@ -292,6 +292,13 @@
         <td>Der kleine Prinz</td>
         <td class="image"><a href="slike/nemacki.jpg" target="_blank"><img src="slike/nemacki.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Osmanski turski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">ottoman Turkish language</a></td>
+        <td class="rtl">كوچوك پره نس</td>
+        <td class="image"><a href="slike/osmanski-turski.jpg" target="_blank"><img src="slike/osmanski-turski.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -306,7 +313,6 @@
 </table>
 
 
-    <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
     <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
