--- a/new.html
+++ b/new.html
@@ -295,9 +295,16 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Osmanski turski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">ottoman Turkish language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">Ottoman Turkish language</a></td>
         <td class="rtl">كوچوك پره نس</td>
         <td class="image"><a href="slike/osmanski-turski.jpg" target="_blank"><img src="slike/osmanski-turski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Poljski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Polish_language" target="_blank">Polish language</a></td>
+        <td>Mały Książę</td>
+        <td class="image"><a href="slike/poljski.jpg" target="_blank"><img src="slike/poljski.jpg" width="50px"></a></td>
       </tr>
      
 <!--
@@ -313,7 +320,7 @@
 </table>
 
 
-    <a href="slike/poljski.jpg">Poljski</a><br/>
+    
     <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
