--- a/new.html
+++ b/new.html
@@ -119,6 +119,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Brazilski portugalski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Brazilian_Portuguese" target="_blank">Brazilian Portuguese language</a></td>
+        <td>O Pequeno Príncipe </td>
+        <td class="image"><a href="slike/portugalski(brazil).jpg" target="_blank"><img src="slike/portugalski(brazil).jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
