--- a/new.html
+++ b/new.html
@@ -313,6 +313,13 @@
         <td>Mały Książę</td>
         <td class="image"><a href="slike/poljski.jpg" target="_blank"><img src="slike/poljski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Prekomurski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Prekmurje_Slovene" target="_blank">Prekmurje Slovene language</a></td>
+        <td>Mali kralič</td>
+        <td class="image"><a href="slike/prekomurski.jpg" target="_blank"><img src="slike/prekomurski.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -327,9 +334,7 @@
 </table>
 
 
-    
-    <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
-    <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
+ 
     <a href="slike/ruski.jpg">Ruski</a><br/>
     <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
