--- a/new.html
+++ b/new.html
@@ -320,6 +320,13 @@
         <td>Mali kralič</td>
         <td class="image"><a href="slike/prekomurski.jpg" target="_blank"><img src="slike/prekomurski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Ruski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Russian_language" target="_blank">Russian language</a></td>
+        <td>Маленький принц</td>
+        <td class="image"><a href="slike/ruski.jpg" target="_blank"><img src="slike/ruski.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -334,8 +341,7 @@
 </table>
 
 
- 
-    <a href="slike/ruski.jpg">Ruski</a><br/>
+
     <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
