--- a/new.html
+++ b/new.html
@@ -327,6 +327,13 @@
         <td>Маленький принц</td>
         <td class="image"><a href="slike/ruski.jpg" target="_blank"><img src="slike/ruski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sanskrit</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sanskrit" target="_blank">Sanskrit</a></td>
+        <td>कनीयान् राजकुमारः</td>
+        <td class="image"><a href="slike/sanskrit.jpg" target="_blank"><img src="slike/sanskrit.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -342,7 +349,6 @@
 
 
 
-    <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
