--- a/new.html
+++ b/new.html
@@ -334,6 +334,13 @@
         <td>कनीयान् राजकुमारः</td>
         <td class="image"><a href="slike/sanskrit.jpg" target="_blank"><img src="slike/sanskrit.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Slovački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Slovak_language" target="_blank">Slovak language</a></td>
+        <td>Malý princ</td>
+        <td class="image"><a href="slike/slovacki.jpg" target="_blank"><img src="slike/slovacki.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -348,8 +355,6 @@
 </table>
 
 
-
-    <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
     <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
