--- a/new.html
+++ b/new.html
@@ -341,6 +341,13 @@
         <td>Malý princ</td>
         <td class="image"><a href="slike/slovacki.jpg" target="_blank"><img src="slike/slovacki.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Slovenački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Slovene_language" target="_blank">Slovene language</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="slike/slovenacki.jpg" target="_blank"><img src="slike/slovenacki.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
@@ -355,7 +362,7 @@
 </table>
 
 
-    <a href="slike/slovenacki.jpg">Slovenački</a><br/>
+    
     <a href="slike/spanski.jpg">Španski</a><br/>
     <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
