--- a/new.html
+++ b/new.html
@@ -369,6 +369,13 @@
         <td>Lille prinsen</td>
         <td class="image"><a href="slike/svedski.jpg" target="_blank"><img src="slike/svedski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tibetanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Standard_Tibetan" target="_blank">Standard Tibetan language</a></td>
+        <td> རྒྱལ་སྲས་ཆུང་ངུ་།</td>
+        <td class="image"><slike/tibetanski.jpg" target="_blank"><img src="slike/tibetanski.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       <tr>
