--- a/new.html
+++ b/new.html
@@ -381,7 +381,7 @@
         <td>Toba jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Toba_Qom_language" target="_blank">Toba Qom language</a></td>
         <td>So Shiỹaxauolec nta'a</td>
-        <td class="image"><a href="slike/kurdski.jpg" target="_blank"><img src="slike/kurdski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/toba.jpg" target="_blank"><img src="slike/toba.jpg" width="50px"></a></td>
       </tr>   
       <tr>
         <td class="number"><span class="auto"></span></td>
