--- a/new.html
+++ b/new.html
@@ -374,7 +374,7 @@
         <td>Tibetanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Standard_Tibetan" target="_blank">Standard Tibetan language</a></td>
         <td> རྒྱལ་སྲས་ཆུང་ངུ་།</td>
-        <td class="image"><slike/tibetanski.jpg" target="_blank"><img src="slike/tibetanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/tibetanski.jpg" target="_blank"><img src="slike/tibetanski.jpg" width="50px"></a></td>
       </tr>
           <tr>
         <td class="number"><span class="auto"></span></td>
