--- a/new.html
+++ b/new.html
@@ -390,6 +390,13 @@
         <td>Küçük prens</td>
         <td class="image"><a href="slike/turski.jpg" target="_blank"><img src="slike/turski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Vijetnamski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Vietnamese_language" target="_blank">Vietnamese language</a></td>
+        <td>Hoàng Tử Bé</td>
+        <td class="image"><a href="slike/vijetnamski.jpg" target="_blank"><img src="slike/vijetnamski.jpg" width="50px"></a></td>
+      </tr>
      
 <!--
       
