--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -36,6 +36,7 @@
     <a href="slike/hebrejski.jpg">Hebrejski</a><br/>
     <a href="slike/hindi.jpg">Hindi</a><br/>
     <a href="slike/holandski.jpg">Holandski</a><br/>
+    <a href="slike/hrvatski kajkavski.jpg">Hrvatski kajkavski</a><br/>
     <a href="slike/italijanski.jpg">Italijanski</a><br/>
     <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
