--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
         <td>Hrvatski kajkavski jezik</td>
         <td><a href=https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
-        <td class="image"><a href="slike/hrvatski kajkavski.jpg" target="_blank"><img src="slike/hrvatski kajkavski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/hrvatski, kajkavski.jpg" target="_blank"><img src="slike/hrvatski, kajkavski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
