--- a/index.html
+++ b/index.html
@@ -121,14 +121,14 @@
         <td>Brazilski portugalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Brazilian_Portuguese" target="_blank">Brazilian Portuguese language</a></td>
         <td>O Pequeno Príncipe </td>
-        <td class="image"><a href="slike/portugalski(brazil).jpg" target="_blank"><img src="slike/portugalski(brazil).jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/brazil-portugalski.jpg" target="_blank"><img src="slike/brazil-portugalski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
-        <td class="image"><a href="slike/bugarski.jpg" target="_blank"><img src="slike/bugarski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/bugarski-1.jpg" target="_blank"><img src="slike/bugarski-1.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -136,6 +136,13 @@
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
         <td class="image"><a href="slike/bugarski-2.jpg" target="_blank"><img src="slike/bugarski-2.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Chavakano jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
+        <td>El Diutay principe </td>
+        <td class="image"><a href="slike/chavacano.jpg" target="_blank"><img src="slike/chavacano.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -160,17 +167,17 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Filipinski (Tagalog) jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino (Tagalog) language</a></td>
-        <td>Ang Munting Prinsipe</td>
-        <td class="image"><a href="slike/filipinski.jpg" target="_blank"><img src="slike/filipinski.jpg" width="50px"></a></td>
+        <td>Filipinski Bikol jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino Bikol Language</a></td>
+        <td>An Sadit na Prinsipe</td>
+        <td class="image"><a href="slike/filipinski-bicol.jpg" target="_blank"><img src="slike/filipinski-bicol.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Filipinski (Bikol) jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino (Bikol) Language</a></td>
-        <td>An Sadit na Prinsipe</td>
-        <td class="image"><a href="slike/filipinski(bicol).jpg" target="_blank"><img src="slike/filipinski(bicol).jpg" width="50px"></a></td>
+        <td>Filipinski Tagalog jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tagalog_language" target="_blank">Filipino Tagalog language</a></td>
+        <td>Ang Munting Prinsipe</td>
+        <td class="image"><a href="slike/filipinski-tagalog.jpg" target="_blank"><img src="slike/filipinski-tagalog.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -211,7 +218,7 @@
         <td>Hrvatski kajkavski jezik</td>
         <td><a href=https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
-        <td class="image"><a href="slike/hrvatski, kajkavski.jpg" target="_blank"><img src="slike/hrvatski, kajkavski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/hrvatski-kajkavski.jpg" target="_blank"><img src="slike/hrvatski-kajkavski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -225,7 +232,7 @@
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
-        <td class="image"><a href="slike/milanski-dijalekt.jpg" target="_blank"><img src="slike/milanski-dijalekt.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/italijanski-milanski_dijalekt.jpg" target="_blank"><img src="slike/italijanski-milanski_dijalekt.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
@@ -255,14 +262,7 @@
         <td>小王子</td>
         <td class="image"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px"></a></td>
       </tr>
-       <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Chavakano jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
-        <td>El Diutay principe </td>
-        <td class="image"><a href="slike/kreolski(chavacano).jpg" target="_blank"><img src="slike/kreolski(chavacano).jpg" width="50px"></a></td>
-      </tr>
-      <tr>
+            <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
