--- a/index.html
+++ b/index.html
@@ -214,9 +214,10 @@
         <td>De kleine prins</td>
         <td class="image"><a href="slike/holandski.jpg" target="_blank"><img src="slike/holandski.jpg" width="50px"></a></td>
       </tr>
-      <td class="number"><span class="auto"></span></td>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Hrvatski kajkavski jezik</td>
-        <td><a href=https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Kajkavian" target="_blank">Kajkavian</a></td>
         <td>Mali Kralevič</td>
         <td class="image"><a href="slike/hrvatski-kajkavski.jpg" target="_blank"><img src="slike/hrvatski-kajkavski.jpg" width="50px"></a></td>
       </tr>
