--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -28,6 +28,7 @@
     <a href="slike/bugarski.jpg">Bugarski</a><br/>
     <a href="slike/bugarski-2.jpg">Bugarski 2</a><br/>
     <a href="slike/cecenski.jpg">Čečenski</a><br/>
+    <a href="slike/ceski.jpg">Češki</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
     <a href="slike/esperanto.jpg">Esperanto</a><br/>
     <a href="slike/francuski.jpg">Francuski</a><br/>
