--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -57,6 +57,7 @@
     <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
     <a href="slike/prekomurski.jpg">Prekomurski</a><br/>
     <a href="slike/ruski.jpg">Ruski</a><br/>
+    <a href="slike/rumunski.jpg">Rumunski</a><br/>
     <a href="slike/sanskrit.jpg">Sanskrit</a><br/>
     <a href="slike/slovacki.jpg">Slovački</a><br/>
     <a href="slike/slovenacki.jpg">Slovenački</a><br/>
