--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -52,6 +52,7 @@
     <a href="slike/milanski-dijalekt.jpg">Milanski dijalekt</a><br/>
     <a href="slike/moliski.jpg">Moliški</a><br/>
     <a href="slike/nemacki.jpg">Nemački</a><br/>
+    <a href="slike/nepalski.jpg">Nepalski</a><br/>
     <a href="slike/osmanski-turski.jpg">Osmanski turski</a><br/>
     <a href="slike/poljski.jpg">Poljski</a><br/>
     <a href="slike/portugalski(brazil).jpg">Portugalski (Brazil)</a><br/>
