--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -69,6 +69,7 @@
     <a href="slike/svedski.jpg">Švedski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
+    <a href="slike/turkmenski.jpg">Turkmenski</a><br/>
     <a href="slike/turski.jpg">Turski</a><br/>
     <a href="slike/vijetnamski.jpg">Vijetnamski</a><br/>
   </body>
