--- a/index.html
+++ b/index.html
@@ -237,6 +237,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Japanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Japanese_language" target="_blank">Japanese language</a></td>
+        <td>星の王子さま</td>
+        <td class="image"><a href="slike/japanski.jpg" target="_blank"><img src="slike/japanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
