--- a/index.html
+++ b/index.html
@@ -398,6 +398,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Turkmenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkmen_language" target="_blank">Turkmen language</a></td>
+        <td>Kiçijik Şazada</td>
+        <td class="image"><a href="slike/turkmenski.jpg" target="_blank"><img src="slike/turkmenski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_language" target="_blank">Turkish language</a></td>
         <td>Küçük prens</td>
