--- a/index.html
+++ b/index.html
@@ -314,6 +314,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nepalski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Nepali_language" target="_blank">Nepali language</a></td>
+        <td>फुच्चे राजकुमार</td>
+        <td class="image"><a href="slike/nepalski.jpg" target="_blank"><img src="slike/nepalski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Osmanski turski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ottoman_Turkish_language" target="_blank">Ottoman Turkish language</a></td>
         <td class="rtl">كوچوك پره نس</td>
