--- a/index.html
+++ b/index.html
@@ -342,6 +342,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Rumunski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romanian_language" target="_blank">Romanian language</a></td>
+        <td>Micul prinţ</td>
+        <td class="image"><a href="slike/rumunski.jpg" target="_blank"><img src="slike/rumunski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Ruski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Russian_language" target="_blank">Russian language</a></td>
         <td>Маленький принц</td>
