--- a/index.html
+++ b/index.html
@@ -146,6 +146,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Čečenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chechen_language" target="_blank">Chechen language</a></td>
+        <td>Жима Эла</td>
+        <td class="image"><a href="slike/cecenski.jpg" target="_blank"><img src="slike/cecenski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/English_language" target="_blank">English language</a></td>
         <td>The Little prince</td>
