--- a/index.html
+++ b/index.html
@@ -151,6 +151,13 @@
         <td>Жима Эла</td>
         <td class="image"><a href="slike/cecenski.jpg" target="_blank"><img src="slike/cecenski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Češki jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Czech_language" target="_blank">Czech language</a></td>
+        <td>Malý princ</td>
+        <td class="image"><a href="slike/ceski.jpg" target="_blank"><img src="slike/ceski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Engleski jezik</td>
