--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -22,6 +22,7 @@
     <a href="slike/srpski-cirilica-1.jpg">Srpski ćirilica 1</a><br/>
     <a href="slike/srpski-cirilica-2.jpg">Srpski ćirilica 2</a><br/>
     <a href="slike/srpski-cirilica-3.jpg">Srpski ćirilica 3</a><br/>
+     <a href="slike/prosirena realnost.jpg">Proširena realnost</a><br/>
     <a href="slike/arapski.jpg">Arapski</a><br/>
     <a href="slike/baskirski.jpg">Baskirski</a><br/>
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
