--- a/index.html
+++ b/index.html
@@ -97,6 +97,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mali princ AR</td>
+        <td><a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">Augmented reality</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="slike/prosirena realnost.jpg" target="_blank"><img src="slike/prosirena realnost.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">شازده کوچولو</td>
