--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Mali princ AR</td>
+        <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">Augmented reality</a></td>
-        <td>Mali princ</td>
+        <td>Mali princ AR</td>
         <td class="image"><a href="slike/prosirena realnost.jpg" target="_blank"><img src="slike/prosirena realnost.jpg" width="50px"></a></td>
       </tr>
       <tr>
