--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -45,6 +45,7 @@
     <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
+    <a href="slike/kmerski.jpg">Kmerski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski (chavacano)</a><br/>
     <a href="slike/kurdski.jpg">Kurdski</a><br/>
     <a href="slike/latinski.jpg">Latinski</a><br/>
