--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -73,6 +73,8 @@
     <a href="slike/toba.jpg">Toba</a><br/>
     <a href="slike/turkmenski.jpg">Turkmenski</a><br/>
     <a href="slike/turski.jpg">Turski</a><br/>
+    <a href="slike/uzbecki-cirilica.jpg">Uzbečki-ćirilica</a><br/>
+    <a href="slike/uybecki-latinica.jpg">Uybečki-latinica</a><br/>
     <a href="slike/vijetnamski.jpg">Vijetnamski</a><br/>
   </body>
 </html>
