--- a/index.html
+++ b/index.html
@@ -291,7 +291,14 @@
         <td>小王子</td>
         <td class="image"><a href="slike/kineski.jpg" target="_blank"><img src="slike/kineski.jpg" width="50px"></a></td>
       </tr>
-            <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kmerski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Khmer_language" target="_blank">Khmer language</a></td>
+        <td>ព្រះអង្គម្ឆាស់តូច</td>
+        <td class="image"><a href="slike/kmerski.jpg" target="_blank"><img src="slike/kmerski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kurdski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kurdish_languages" target="_blank">Kurdish language</a></td>
