--- a/index.html
+++ b/index.html
@@ -461,6 +461,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Uzbečki jezik latinica</td>
+        <td><a href="https://en.wikipedia.org/wiki/Uzbek_language" target="_blank">Uzbek language</a></td>
+        <td>Kichkina Shahzoda</td>
+        <td class="image"><a href="slike/uzbecki-latinica.jpg" target="_blank"><img src="slike/uzbecki-latinica.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Vijetnamski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Vietnamese_language" target="_blank">Vietnamese language</a></td>
         <td>Hoàng Tử Bé</td>
