--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -45,7 +45,7 @@
     <a href="slike/kazaski.jpg">Kazaski</a><br/>
     <a href="slike/katalonski.jpg">Katalonski</a><br/>
     <a href="slike/kineski.jpg">Kineski</a><br/>
-    <a href="slike/kineski.jpg">Kirgiski</a><br/>
+    <a href="slike/kirgiski.jpg">Kirgiski</a><br/>
     <a href="slike/kmerski.jpg">Kmerski</a><br/>
     <a href="slike/kreolski(chavacano).jpg">Kreolski (chavacano)</a><br/>
     <a href="slike/kurdski.jpg">Kurdski</a><br/>
@@ -70,6 +70,7 @@
     <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
     <a href="slike/starogrcki.jpg">Starogrcki</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
+    <a href="slike/tatarski.jpg">Tatarski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
     <a href="slike/turkmenski.jpg">Turkmenski</a><br/>
