--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -73,6 +73,7 @@
     <a href="slike/tatarski.jpg">Tatarski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
+    <a href="slike/tuareg.jpg">Tuareg</a><br/>
     <a href="slike/turkmenski.jpg">Turkmenski</a><br/>
     <a href="slike/turski.jpg">Turski</a><br/>
     <a href="slike/uzbecki-cirilica.jpg">Uzbečki-ćirilica</a><br/>
