--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -72,6 +72,7 @@
     <a href="slike/staroegipatski.jpg">Staroegipatski</a><br/>
     <a href="slike/starogrcki.jpg">Starogrcki</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
+    <a href="slike/tajlandski.jpg">Tajlandski</a><br/>
     <a href="slike/tatarski.jpg">Tatarski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
