--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -52,6 +52,7 @@
     <a href="slike/kurdski.jpg">Kurdski</a><br/>
     <a href="slike/latinski.jpg">Latinski</a><br/>
     <a href="slike/letonski.jpg">Letonski</a><br/>
+    <a href="slike/libanski.jpg">Libanski</a><br/>
     <a href="slike/litvanski.jpg">Litvanski</a><br/>
     <a href="slike/madjarski.jpg">Madjarski</a><br/>
     <a href="slike/makedonski.jpg">Makedonski</a><br/>
