--- a/index.html
+++ b/index.html
@@ -293,6 +293,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kirgiski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kyrgyz_language" target="_blank">Kyrgyz language</a></td>
+        <td>Кичинекей Ханзада</td>
+        <td class="image"><a href="slike/kirgiski.jpg" target="_blank"><img src="slike/kirgiski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kmerski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Khmer_language" target="_blank">Khmer language</a></td>
         <td>ព្រះអង្គម្ឆាស់តូច</td>
