--- a/index.html
+++ b/index.html
@@ -433,6 +433,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tatarski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tatar_language" target="_blank">Tatar language</a></td>
+        <td>Нәни принц</td>
+        <td class="image"><a href="slike/tatarski.jpg" target="_blank"><img src="slike/tatarski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tibetanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Standard_Tibetan" target="_blank">Standard Tibetan language</a></td>
         <td> རྒྱལ་སྲས་ཆུང་ངུ་།</td>
