--- a/index.html
+++ b/index.html
@@ -454,6 +454,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Tuareški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tuareg_languages" target="_blank">Tuareg languages</a></td>
+        <td>ⴴⵟⵀⵍ</td>
+        <td class="image"><a href="slike/tuareg.jpg" target="_blank"><img src="slike/tuareg.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Turkmenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkmen_language" target="_blank">Turkmen language</a></td>
         <td>Kiçijik Şazada</td>
