--- a/index.html
+++ b/index.html
@@ -265,6 +265,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Kabardinski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kabardian_language" target="_blank">Kabardian language</a></td>
+        <td>Пщы Нэнау</td>
+        <td class="image"><a href="slike/kabardinski.jpg" target="_blank"><img src="slike/kabardinski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Moliški dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Slavomolisano_dialect" target="_blank">Molise dialect</a></td>
         <td>Ru Prengeparielle</td>
