--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Litvanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lithuanian_language" target="_blank">Lithuanian language</a></td>
+        <td>Mažasis princas</td>
+        <td class="image"><a href="slike/litvanski.jpg" target="_blank"><img src="slike/litvanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Mađarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Hungarian_language" target="_blank">Hungarian language</a></td>
         <td>A Kis herceg</td>
