--- a/index.html
+++ b/index.html
@@ -335,6 +335,13 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Libanski arapski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Lebanese_Arabic" target="_blank">Lebanese Arabic language</a></td>
+        <td class="rtl">الأمير الزغير</td>
+        <td class="image"><a href="slike/hebrejski.jpg" target="_blank"><img src="slike/hebrejski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Litvanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Lithuanian_language" target="_blank">Lithuanian language</a></td>
         <td>Mažasis princas</td>
