--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
         <td>Libanski arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Lebanese_Arabic" target="_blank">Lebanese Arabic language</a></td>
         <td class="rtl">الأمير الزغير</td>
-        <td class="image"><a href="slike/hebrejski.jpg" target="_blank"><img src="slike/hebrejski.jpg" width="50px"></a></td>
+        <td class="image"><a href="slike/libanski.jpg" target="_blank"><img src="slike/libanski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
