--- a/old-2019-05-05.html
+++ b/old-2019-05-05.html
@@ -28,6 +28,7 @@
     <a href="slike/bosanski.jpg">Bosanski</a><br/>
     <a href="slike/bugarski.jpg">Bugarski</a><br/>
     <a href="slike/bugarski-2.jpg">Bugarski 2</a><br/>
+    <a href="slike/burmanski.jpg">Burmanski</a><br/>
     <a href="slike/cecenski.jpg">Čečenski</a><br/>
     <a href="slike/ceski.jpg">Češki</a><br/>
     <a href="slike/engleski.jpg">Engleski</a><br/>
@@ -74,6 +75,7 @@
     <a href="slike/starogrcki.jpg">Starogrcki</a><br/>
     <a href="slike/svedski.jpg">Švedski</a><br/>
     <a href="slike/tajlandski.jpg">Tajlandski</a><br/>
+    <a href="slike/tajlandski2.jpg">Tajlandski 2</a><br/>
     <a href="slike/tatarski.jpg">Tatarski</a><br/>
     <a href="slike/tibetanski.jpg">Tibetanski</a><br/>
     <a href="slike/toba.jpg">Toba</a><br/>
