--- a/index.html
+++ b/index.html
@@ -144,6 +144,13 @@
         <td>Малкия принц</td>
         <td class="image"><a href="slike/bugarski-2.jpg" target="_blank"><img src="slike/bugarski-2.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Burmanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Burmese_language" target="_blank">Burmese language</a></td>
+        <td>မင်းသားသေ</td>
+        <td class="image"><a href="slike/burmanski.jpg" target="_blank"><img src="slike/burmanski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Chavakano jezik</td>
