--- a/index.html
+++ b/index.html
@@ -466,6 +466,13 @@
         <td>เจ้าชายน้อย</td>
         <td class="image"><a href="slike/tajlandski.jpg" target="_blank"><img src="slike/tajlandski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Tajlandski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Thai_language" target="_blank">Thai language</a></td>
+        <td>เจ้าชายน้อย</td>
+        <td class="image"><a href="slike/tajlandski2.jpg" target="_blank"><img src="slike/tajlandski2.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Tatarski jezik</td>
