--- a/index.html
+++ b/index.html
@@ -237,6 +237,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Gvarani jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Guarani_language" target="_blank">Guarani language</a></td>
+        <td>Principe'i</td>
+        <td class="image"><a href="naslovna/gvarani.jpg" target="_blank"><img src="naslovna/gvarani.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/gvarani.jpg" target="_blank"><img src="prva/gvarani.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Starogrčki jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Ancient_Greek" target="_blank">Ancient Greek language</a></td>
         <td>Τὸ βασιλείδιον</td>
