--- a/index.html
+++ b/index.html
@@ -461,6 +461,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romani_language" target="_blank">Romani language</a></td>
+        <td>O cino krajoro</td>
+        <td class="image"><a href="naslovna/romski.jpg" target="_blank"><img src="naslovna/romski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romski.jpg" target="_blank"><img src="prva/romski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Rumunski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romanian_language" target="_blank">Romanian language</a></td>
         <td>Micul prinţ</td>
