--- a/index.html
+++ b/index.html
@@ -517,6 +517,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Staroengleski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Anglo-Saxon_runes" target="_blank">Anglo-Saxon runes</a></td>
+        <td>Be þam Lẏtlan Æþelinge</td>
+        <td class="image"><a href="naslovna/staroengleski.jpg" target="_blank"><img src="naslovna/staroengleski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/staroengleski.jpg" target="_blank"><img src="prva/staroengleski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Španski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Spanish_language" target="_blank">Spanish language</a></td>
         <td>El Principito</td>
