--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Starofrancuski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Old_French" target="_blank">Old French language</a></td>
+        <td>Li Juenes Princes</td>
+        <td class="image"><a href="naslovna/starofrancuski.jpg" target="_blank"><img src="naslovna/starofrancuski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/starofrancuski.jpg" target="_blank"><img src="prva/starofrancuski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Filipinski Bikol jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino Bikol Language</a></td>
         <td>An Sadit na Prinsipe</td>
