--- a/index.html
+++ b/index.html
@@ -589,6 +589,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Totonački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sierra_Totonac_language" target="_blank">Sierra Totonac language</a></td>
+        <td>Xa’ púxku’ a’ktsú qa’wa’sa</td>
+        <td class="image"><a href="naslovna/totonacki.jpg" target="_blank"><img src="naslovna/totonacki.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/totonacki.jpg" target="_blank"><img src="prva/totonacki.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Tuareški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tuareg_languages" target="_blank">Tuareg languages</a></td>
         <td>ⴴⵟⵀⵍ</td>
